# HetznerDDNSPy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  1password_example.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: reviewer.md  test-writer.md
.claude/commands/: release-notes.md  verify.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  runbook.md  security.md
docs/adr/: 0001-stdlib-only-runtime.md
etc/: hetzner_ddns.conf.example
etc/systemd/: hetzner_ddns.service  hetzner_ddns.timer
src/hetzner_ddns/: __init__.py  __main__.py  cli.py  config.py  errors.py  hetzner.py  ip.py  logging_setup.py  state.py  updater.py  validation.py
tests/: conftest.py
tests/e2e/: test_cli_e2e.py
tests/integration/: test_updater_errors.py  test_updater_flow.py
tests/unit/: test_cli.py  test_config.py  test_config_op.py  test_hetzner_client.py  test_hetzner_retry.py  test_ip.py  test_logging_setup.py  test_state.py  test_state_errors.py  test_updater.py  test_validation.py
